<resources>
    <string name="app_name">ScioTy</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="specAppName">ScioTy</string>

    <string name="specBtnSkipForNowText">"SKIP FOR NOW"</string>
    <string name="specBtnUpgradeToProText">"UPGRADE TO PRO SERVICE"</string>

    <!--home screen-->
    <string name="specCreateAccount">"Create Account"</string>
    <string name="specSignIn">"Sign In"</string>
    <string name="mainscreen_slide1">"\u0020 \u0020 \u0020 Carousel of concise blurbs here to Present  \u0020 \u0020 \u0020 \u0020 \u0020 opportunities for Pro Service features"</string>
    <string name="mainscreen_slide2">"slide2 text"</string>
    <string name="mainscreen_slide3">"slide3 text"</string>
    <string name="mainscreen_slide4">"slide4 text"</string>
    <string name="mainscreen_slide5">"slide5 text"</string>

    <string name="dev_login_failed">Your username and password not matched, please re-login</string>

    <!-- create account-->
    <string name="less_than">&lt;</string>
    <string name="greater_than">&gt;</string>

    <string name="specEmailText">"Email"</string>
    <string name="specUserName">"UserName (min 4 characters) "</string>
    <string name="specPhone">"Phone number"</string>
    <string name="specPasswordText">"Password (min 4 characters) "</string>
    <string name="specConfirmPasswordtext">"Confirm Password"</string>

    <string name="empty_fields">User Name/Email/Phone Number/Password is empty</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="minimum_length">User Name/Email/Password length should be at least of 4 characters</string>
    <string name="network_check">Please check your Internet connection and try again.</string>
    <string name="specCreateAccountText">"By creating a FREE account, you agree to SmartScanner's EULA and Privacy Policy"</string>

    <string name="invalid_email_format">Invalid email format. </string>
    <string name="user_exists">Email already exists. </string>
    <string name="server_time_out">Server Timed out. Please try again.</string>
    <string name="internal_error">Internal error Unable to proceed with Registration . please try again . if problem persists please contact support</string>
    <string name="registration_success">An email has sent to your email please click on the link to verify your email address before SignIn</string>

    <!-- sign in-->
    <string name="spec_pwd_hint">Password</string>
    <string name="specResendActivationLink">"Resend Activation Link"</string>
    <string name="specResetPassword">"Reset Password"</string>
    <string name="unable_to_load_from_server_retry">Failed to load data from server. Please Retry.</string>
    <string name="emailenter">Please enter your email</string>
    <string name="invalidemail">Invalid email</string>
    <string name="resendemail">Activation Email sent</string>
    <string name="resendemailfail">Resend active email fail</string>
    <string name="emailverification">"The user not found or a wrong password provided"</string>

    <!--Forgot Password-->
    <string name="forgot_password_name">Forgot Password</string>
    <string name="please_enter_your_user_id">Please enter your User ID</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="request_password">REQUEST PASSWORD</string>
    <string name="ok">Ok</string>
    <string name="select_event_reset_password">Reset Password</string>
    <string name="select_event_send_email">The Password has been Reset and an Email has been sent to the user ID/Email address provided</string>
    <string name="user_not_found">User not found. </string>
    <string name="Forgot_empty_email">Email is required</string>

    <!-- add device-->
    <string name="specDevice">Available Devices</string>
    <string name="no_device">No device is in this account. Please click add device to add this device into the account</string>

    <!--  add user-->
    <string name="enter_user_id">Please enter user ID</string>

</resources>
