<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blur_bg"
    android:gravity="bottom"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progress_in_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"></ProgressBar>

    <Button
        android:onClick="onClickOk"
        android:id="@+id/ok"
        style="@style/textFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bttm_bttn_bg"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ok"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="5dp"
        android:weightSum="3">

        <TextView
            android:layout_weight="1"
            android:id="@+id/text1"
            style="@style/textFont"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/select_event_reset_password"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_weight="2"
            android:id="@+id/text2"
            style="@style/textFont"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/select_event_send_email"
            android:textColor="@android:color/black" />
    </LinearLayout>

</RelativeLayout>