<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <TextView
        android:id="@+id/text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_alignParentTop="true"
        android:textSize="30dp"></TextView>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text5"
        android:src="@drawable/scioty_small"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="V1.0.0, Patent Pending"
        android:layout_below="@id/logo"
        android:gravity="center"
        android:textSize="14dp"></TextView>

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/back"
            style="@style/textFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingLeft="10dip"
            android:paddingRight="20dip"
            android:paddingTop="7dip"
            android:text="@string/less_than"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/events_settings_bg"
            android:textSize="@dimen/back"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgot_password"
            style="@style/textFont"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/forgot_password_name"
            android:textColor="@color/events_settings_bg"
            android:textSize="@dimen/top_bar"
            android:textStyle="bold"
            android:visibility="gone" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:id="@+id/please_enter_id"
                style="@style/textFont"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@string/please_enter_your_user_id"
                android:textColor="@color/blue"
                android:textSize="@dimen/text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/enter_email"
                style="@style/textFont"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:hint="@string/enter_email_id"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/blue_text_color"
                android:textColorHint="@color/hint_text_color"
                android:textSize="@dimen/title"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:visibility="gone" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/events_settings_bg" />


    <Button
        android:id="@+id/request_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_bg_color"
        android:onClick="resetPassword"
        android:layout_alignParentBottom="true"
        android:text="@string/request_password"
        android:textColor="@color/events_settings_bg"
        android:textStyle="bold" />

</RelativeLayout>